Update product pages UI